Update libraries and begin preparing to switch to JDK 11